--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>Shopping Cart</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/451aeb1349.js" crossorigin="anonymous"></script>
@@ -18,6 +18,8 @@
       <i class="fab fa-opencart"></i>
       <h1> Projeto Shopping Cart</h1>
     </header>
+    <input type='text' id='searchField'></input>
+    <button id='searchBtn'>Pesquisar</button>
     <section class="container">
       <section class="items"></section>
       <section class="cart">
