FIX titulo pagina

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <div class="container-header">
-        <h1> <i class="fab fa-opencart"></i> Projeto Shopping Cart</h1>
+        <h1> <i class="fab fa-opencart"></i>Shopping Cart</h1>
       </div>
       <div class="container-header">
         <input type='text' id='searchField'></input>
